@@ -80,13 +80,14 @@ remediation=Remediation
 instructions=Instructions
 
 [ui.status.graphs]
-display=unregistered, violations, nodes,ifoctetshistoryswitch,ifoctetshistorymac,ifoctetshistoryuser
+display=unregistered, violations, nodes,ifoctetshistoryswitch,ifoctetshistorymac,ifoctetshistoryuser,traps
 unregistered=Unregistered Nodes
 violations=Violations
 nodes=Total Nodes
 ifoctetshistoryswitch= Accounting (Switch)
 ifoctetshistorymac= Accounting (MAC)
 ifoctetshistoryuser= Accounting (User)
+traps=SNMP Traps
 
 [ui.status.nuggets]
 display=recent_violations,recent_violations_opened,recent_violations_closed,recent_registrations,current_grace,current_activity,current_node_status
