@@ -47,6 +47,8 @@
           (http://www.packetfence.org/mantis/view.php?id=425)
         traplog expiration
           (http://www.packetfence.org/mantis/view.php?id=426)
+        traplog integration in web admin interface
+          (http://www.packetfence.org/mantis/view.php?id=362)
 
 1.7.4
         undef operator in SNMP.pm
